Cleanup & tweaking